kubernetes/apps/media/jellyseerr/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr-internal
  namespace: media
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - requests.krapulax.home
  rules:
    - backendRefs:
        - name: jellyseerr
          namespace: media
          port: 5055
